--- a/data/author.yml
+++ b/data/author.yml
@@ -1,23 +1,9 @@
-name: Sharad Raj
-dp: https://avatars2.githubusercontent.com/u/36638057?s=460&u=0cbe4fd6b5a3655d91b3eb86db834d0829a0c086&v=4
+name: Amaanullah Bhatti
+dp: https://drive.google.com/file/d/19R_ofmYoFeDyDgG8Qvl3iKqNkdxjhuOC/view?usp=share_link
 description: "
   <p>
-    Developed by Sharad Raj who lives in India building useful things for the world.
+    Hello, my name is Amaanullah Bhatti. I am a researcher in the fields of Software Development, Economics, Geo-politics, Polemology, Imperialism, Neo-Colonialism, Religion and Investment analysis with 7 years of experience in the fields. I had the opportunity to work with some incredible colleagues and organizations. While I am proud of my accomplishments, I am always striving to learn and grow as a professional. I am grateful for the opportunity to contribute my skills and knowledge to any team or project
   </p>
   <br/>
-  <p>
-    You should follow him on <a href='https://github.com/sharadcodes' target='_blank'>Github</a>
-  </P>
+  
 "
-email: dev_sharad@outlook.com
-contact:
-  - title: linkedin
-    url: https://www.linkedin.com/in/srsmaurya
-  - title: github
-    url: https://github.com/sharadcodes
-  - title: twitter
-    url: https://twitter.com/sharadcodes
-  - title: dev
-    url: https://dev.to/sharadcodes
-  - title: email
-    url: mailto:me@example.com
